[gd_scene load_steps=18 format=3 uid="uid://bfp18om31rkd6"]

[ext_resource type="Script" uid="uid://eopbgy5q8mqe" path="res://screen/tutorial/tutorial_screen.gd" id="1_vonu2"]
[ext_resource type="Shader" uid="uid://rx70e3lyh14r" path="res://screen/title/background_shader.gdshader" id="2_ji2fd"]
[ext_resource type="Texture2D" uid="uid://7a1t6eekqrox" path="res://screen/tutorial/0.png" id="2_ywxpl"]
[ext_resource type="Texture2D" uid="uid://hmo32bljo8dp" path="res://screen/tutorial/1.png" id="4_e0mus"]
[ext_resource type="Texture2D" uid="uid://5lg68fylufms" path="res://screen/tutorial/2.png" id="5_pf55m"]
[ext_resource type="Texture2D" uid="uid://bt1qmyr1hnvky" path="res://screen/tutorial/3.png" id="6_1ryq4"]
[ext_resource type="Texture2D" uid="uid://buedkwasc6mr4" path="res://screen/tutorial/4.png" id="7_7k4ln"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppnrf"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.32239994, 0.62, 0.062000014, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Gradient" id="Gradient_e0mus"]
colors = PackedColorArray(0.7033092, 0.7033092, 0.703309, 1, 0.008420823, 0.008420827, 0.00842082, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2je2x"]
gradient = SubResource("Gradient_e0mus")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf55m"]
shader = ExtResource("2_ji2fd")
shader_parameter/gradient = SubResource("GradientTexture2D_2je2x")
shader_parameter/circle_color = Color(0.25199997, 0.54, 0, 1)
shader_parameter/circle_multiplier = 14.075
shader_parameter/speed = 0.5
shader_parameter/direction = Vector2(1, 1)
shader_parameter/rotation = Transform2D(1, -1, 1, 1, 0, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_ji2fd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ywxpl")
}, {
"duration": 1.0,
"texture": ExtResource("4_e0mus")
}, {
"duration": 1.0,
"texture": ExtResource("5_pf55m")
}, {
"duration": 1.0,
"texture": ExtResource("6_1ryq4")
}, {
"duration": 1.0,
"texture": ExtResource("7_7k4ln")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vonu2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0.5, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywxpl"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0.75, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ji2fd"]
content_margin_bottom = 10.0
bg_color = Color(0.1508438, 0.1508438, 0.15084386, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bgf0"]
content_margin_bottom = 10.0
bg_color = Color(0.24579084, 0.24579069, 0.24579072, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xli8"]
content_margin_bottom = 10.0
bg_color = Color(0.24579084, 0.24579069, 0.24579072, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[node name="TutorialScreen" type="Node2D"]
script = ExtResource("1_vonu2")

[node name="Background" type="CanvasLayer" parent="."]
layer = -100

[node name="Panel2" type="Panel" parent="Background"]
offset_right = 800.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ppnrf")

[node name="Panel" type="Panel" parent="Background"]
material = SubResource("ShaderMaterial_pf55m")
offset_right = 800.0
offset_bottom = 800.0

[node name="Frames" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(400, 320)
sprite_frames = SubResource("SpriteFrames_ji2fd")

[node name="Loading" type="Label" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_top = 566.0
offset_right = 800.0
offset_bottom = 633.0
pivot_offset = Vector2(500, 50)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 36
text = "loading content..."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 1

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 250.0
offset_top = 665.0
offset_right = 550.0
offset_bottom = 749.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vonu2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ywxpl")
disabled = true
action_mode = 0
text = "Play!"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 50.0
offset_top = 495.0
offset_right = 150.0
offset_bottom = 595.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxFlat_ji2fd")
theme_override_styles/hover = SubResource("StyleBoxFlat_1bgf0")
action_mode = 0
text = "←"

[node name="RightButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 650.0
offset_top = 495.0
offset_right = 750.0
offset_bottom = 595.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxFlat_ji2fd")
theme_override_styles/hover = SubResource("StyleBoxFlat_0xli8")
action_mode = 0
text = "→"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="UI/RightButton" to="." method="_on_right_button_pressed"]
